--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/BedrijfDetailViewView.xaml
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/BedrijfDetailViewView.xaml
@@ -4,9 +4,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EB.BedrijfswagenBeheer.App.Views"
-             xmlns:views="clr-namespace:EB.BedrijfswagenBeheer.App.Views"
-             xmlns:viewmodels="clr-namespace:EB.BedrijfswagenBeheer.App.ViewModels"
-             xmlns:model="clr-namespace:EB.BedrijfswagenBeheer.App.Models"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -43,7 +40,7 @@
 				Grid.Row="1" Grid.Column="0"
 				></TextBlock>
             <TextBlock
-				Text="Gebouwen: "
+				Text="Filialen: "
 				HorizontalAlignment="Right"
 				Grid.Row="2" Grid.Column="0"
 				></TextBlock>
