--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/MainWindow.xaml
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:model="clr-namespace:EB.BedrijfswagenBeheer.App.Models"
         xmlns:views="clr-namespace:EB.BedrijfswagenBeheer.App.Views"
         mc:Ignorable="d"
-        Title="EB - BedrijfswagenBeheer" Height="450" Width="800" >
+        Title="BedrijfswagenBeheer" Height="450" Width="800" >
 
     <Window.DataContext>
         <viewmodels:MainWindowViewModel></viewmodels:MainWindowViewModel>
@@ -20,11 +20,24 @@
             <RowDefinition></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock
+        <!--<TextBlock
 			 Text="{Binding Titel}"
 			Style="{StaticResource TitelStyle}"
 			 Grid.Row="0"
-			 ></TextBlock>
+			 ></TextBlock>-->
+        <DockPanel>
+            <Menu DockPanel.Dock="Top" Grid.Row="0">
+                <MenuItem Header="_File">
+                    <MenuItem Header="_Export.."/>
+                    <Separator></Separator>
+                    <MenuItem Header="_Exit"/>
+                </MenuItem>
+                <MenuItem Header="_Help">
+                    <MenuItem Header="_View Help"/>
+                    <MenuItem Header="_About"/>
+                </MenuItem>
+            </Menu>
+        </DockPanel>
         <Grid
 			 Grid.Row="1"
 			 >
