Add Tooltips to menuitem & Added About View
Need to add more tooltips, and fix menuitem do show other views

--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/App.xaml
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/App.xaml
@@ -34,6 +34,7 @@
             <Setter Property="Margin" Value="0,5,0,5" />
         </Style>
 
+        
         <DataTemplate DataType="{x:Type viewmodels:BedrijvenListViewModel}">
             <views:BedrijvenListView></views:BedrijvenListView>
         </DataTemplate>
@@ -48,6 +49,11 @@
 
         <DataTemplate DataType="{x:Type viewmodels:BedrijfDetailAddViewModel}">
             <views:BedrijfDetailAddView></views:BedrijfDetailAddView>
+        </DataTemplate>
+
+
+        <DataTemplate DataType="{x:Type viewmodels:AboutViewModel}">
+            <views:AboutView></views:AboutView>
         </DataTemplate>
 
     </Application.Resources>
