--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/MainWindow.xaml
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/MainWindow.xaml
@@ -30,7 +30,7 @@
                 <MenuItem Header="_File">
                     <MenuItem Header="_Export.."/>
                     <Separator></Separator>
-                    <MenuItem Header="_Exit"/>
+                    <MenuItem Header="_Exit" Command="{Binding QuitCommand}"/>
                 </MenuItem>
                 <MenuItem Header="_Help">
                     <MenuItem Header="_View Help"/>
