--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/FiliaalDetailAddView.xaml
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/FiliaalDetailAddView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="EB.BedrijfswagenBeheer.App.Views.BedrijfDetailViewView"
+﻿<UserControl x:Class="EB.BedrijfswagenBeheer.App.Views.FiliaalDetailAddView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -29,6 +29,7 @@
                 <ColumnDefinition Width="auto"></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
+            
             <TextBlock
 				Text="Id: "
 				HorizontalAlignment="Right"
@@ -39,27 +40,29 @@
 				HorizontalAlignment="Right"
 				Grid.Row="1" Grid.Column="0"
 				></TextBlock>
+
             <TextBlock
-				Text="Filialen: "
-				HorizontalAlignment="Right"
-				Grid.Row="2" Grid.Column="0"
-				></TextBlock>
-            <TextBlock
-				Text="{Binding Bedrijf.Id}"
+				Text="{Binding addFiliaal.Id}"
 				Grid.Row="0" Grid.Column="1"
 				></TextBlock>
-            <TextBlock
-				Text="{Binding Bedrijf.Naam}"
+            <TextBox
+				Text="{Binding addFiliaal.Naam}"
 				Grid.Row="1" Grid.Column="1"
-				></TextBlock>
-            <ListBox
-				ItemsSource="{Binding Bedrijf.Filialen}"
-				Grid.Row="2" Grid.Column="1"
-				></ListBox>
+				></TextBox>
+            
+            
         </Grid>
         <StatusBar
 			 Grid.Row="2"
 			 >
+            <Button
+				Content="Bewaar"
+				Command="{Binding SaveCommand}"
+				></Button>
+            <Button
+				Content="Annuleer"
+				Command="{Binding CancelCommand}"
+				></Button>
         </StatusBar>
     </Grid>
 </UserControl>
