--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/FiliaalDetailViewView.xaml
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/FiliaalDetailViewView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="EB.BedrijfswagenBeheer.App.Views.BedrijfDetailEditView"
+﻿<UserControl x:Class="EB.BedrijfswagenBeheer.App.Views.FiliaalDetailViewView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -35,38 +35,42 @@
 				Grid.Row="0" Grid.Column="0"
 				></TextBlock>
             <TextBlock
-				Text="Naam: "
+				Text="Naam:"
 				HorizontalAlignment="Right"
 				Grid.Row="1" Grid.Column="0"
 				></TextBlock>
             <TextBlock
-				Text="Filialen: "
+				Text="Wagens:"
 				HorizontalAlignment="Right"
 				Grid.Row="2" Grid.Column="0"
 				></TextBlock>
             <TextBlock
-				Text="{Binding EditBedrijf.Id}"
+				Text="{Binding Filiaal.Id}"
 				Grid.Row="0" Grid.Column="1"
 				></TextBlock>
-            <TextBox
-				Text="{Binding EditBedrijf.Naam}"
+            <TextBlock
+				Text="{Binding Filiaal.Naam}"
 				Grid.Row="1" Grid.Column="1"
-				></TextBox>
+				></TextBlock>
             <ListBox
-				ItemsSource="{Binding EditBedrijf.Filialen}"
+				ItemsSource="{Binding Filiaal.Wagens}"
 				Grid.Row="2" Grid.Column="1"
 				></ListBox>
         </Grid>
         <StatusBar
-			 Grid.Row="2"
+			 Grid.Row="2" Margin="48,0,0,-0.4"
 			 >
             <Button
-				Content="Bewaar"
-				Command="{Binding SaveCommand}"
+				Content="Wagen Toevoegen"
+				Command="{Binding AddWagenCommand}"
 				></Button>
             <Button
-				Content="Annuleer"
-				Command="{Binding CancelCommand}"
+				Content="Wagen Wijzigen"
+				Command="{Binding EditWagenCommand}"
+				></Button>
+            <Button
+				Content="Wagen Verwijderen"
+				Command="{Binding DeleteWagenCommand}"
 				></Button>
         </StatusBar>
     </Grid>
