Wagen kan worden aangemaakt, verwijderd en gewijzigd
Fix 1: Live refresh wanneer wagen verwijderd wordt + lijst filialen (# wagens)
Fix 2: Wagen wordt toegevoegd maar nog niet gekoppeld aan een filiaal

--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/FiliaalDetailViewView.xaml
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/FiliaalDetailViewView.xaml
@@ -54,6 +54,7 @@
 				></TextBlock>
             <ListBox
 				ItemsSource="{Binding Filiaal.Wagens}"
+                SelectedItem="{Binding SelectedWagen}"
 				Grid.Row="2" Grid.Column="1"
 				></ListBox>
         </Grid>
