--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/App.xaml
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/App.xaml
@@ -65,5 +65,9 @@
             <views:AboutView></views:AboutView>
         </DataTemplate>
 
+        <DataTemplate DataType="{x:Type viewmodels:VolledigeLijstBedrijfViewModel}">
+            <views:VolledigeLijstBedrijfView></views:VolledigeLijstBedrijfView>
+        </DataTemplate>
+
     </Application.Resources>
 </Application>
