--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/FiliaalDetailViewView.xaml
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/Views/FiliaalDetailViewView.xaml
@@ -53,7 +53,7 @@
 				Grid.Row="1" Grid.Column="1"
 				></TextBlock>
             <ListBox
-				ItemsSource="{Binding Filiaal.Wagens}"
+				ItemsSource="{Binding Filiaal.Wagens, UpdateSourceTrigger=PropertyChanged}"
                 SelectedItem="{Binding SelectedWagen}"
 				Grid.Row="2" Grid.Column="1"
 				></ListBox>
